--- a/rent-project/src/app/hosting/add-vehicle/add-place.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/add-place.component.html
@@ -1,41 +1,24 @@
-<mat-horizontal-stepper linear #stepper>
+<mat-horizontal-stepper [linear]="false" #stepper>
 
-    <mat-step [stepControl]="messageFromChild">
-        <ng-template matStepLabel>General info</ng-template>
-        <app-form-main (childMessage)="showMessageFromChild($event)"></app-form-main>
-        <button mat-button (click)="submit()">Submit</button>
-    </mat-step>
+	<mat-step [stepControl]="frmStepOne">
+		<ng-template matStepLabel>General info</ng-template>
+		<app-form-main></app-form-main>
+		<button mat-button (click)="submit()">Submit</button>
+	</mat-step>
 
-    <mat-step [stepControl]="firstFormGroup">
-        <form [formGroup]="firstFormGroup">
-          <ng-template matStepLabel>Place type</ng-template>
-          <mat-form-field>
-            <input matInput placeholder="Last name, First name" formControlName="firstCtrl">
-          </mat-form-field>
-          <div>
-            <button mat-button matStepperNext>Next</button>
-          </div>
-        </form>
-    </mat-step>
+	<mat-step>
+		<ng-template matStepLabel>Location</ng-template>
+		<app-form-location></app-form-location>
+	</mat-step>
 
-    <!-- <mat-step [stepControl]="secondFormGroup">
-      <form [formGroup]="secondFormGroup">
-        <ng-template matStepLabel>Location</ng-template>
-        <mat-form-field>
-          <input matInput placeholder="Address" formControlName="secondCtrl" required>
-        </mat-form-field>
-        <div>
-          <button mat-button matStepperPrevious>Back</button>
-          <button mat-button matStepperNext>Next</button>
-        </div>
-      </form>  
-    </mat-step>    
-    <mat-step>
-        <ng-template matStepLabel>Rooms</ng-template>
-      You are now done.
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button (click)="stepper.reset()">Reset</button>
-      </div>
-    </mat-step> -->
-  </mat-horizontal-stepper>
+	<mat-step>
+		<ng-template matStepLabel>Location</ng-template>
+		<app-form-location></app-form-location>
+	</mat-step>
+
+	<mat-step>
+		<ng-template matStepLabel>Location</ng-template>
+		<app-form-location></app-form-location>
+	</mat-step>
+
+</mat-horizontal-stepper>
