--- a/rent-project/src/app/hosting/add-vehicle/form-location/form-location.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-location/form-location.component.html
@@ -1,1 +1,5 @@
-<p>form-location works!</p>
+<div class="container text-center">
+
+    <button mat-button matStepperPrevious>Back</button>
+    <button mat-button matStepperNext>Next</button>
+</div>
