--- a/rent-project/src/app/hosting/add-vehicle/form-location/form-location.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-location/form-location.component.html
@@ -1,4 +1,18 @@
 <div class="container text-center">
+    <form [formGroup]="locationForm">
+        <div class="row">
+            <div class="col-6">
+                <mat-form-field>
+                    <input type="text" placeholder="Pick one" aria-label="Number" matInput formControlName="region" [matAutocomplete]="auto">
+                    <mat-autocomplete autoActiveFirstOption #auto="matAutocomplete">
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                        {{option}}
+                        </mat-option>
+                    </mat-autocomplete>
+                </mat-form-field>
+            </div>
+        </div>
+    </form>
 
     <button mat-button matStepperPrevious>Back</button>
     <button mat-button matStepperNext>Next</button>
