--- a/rent-project/src/app/hosting/add-vehicle/form-description/form-description.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-description/form-description.component.html
@@ -1,1 +1,4 @@
-<p>form-description works!</p>
+<div class="container text-center">
+    <button mat-button matStepperPrevious>Back</button>
+    <button mat-button matStepperNext>Next</button>
+</div>
