--- a/rent-project/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
@@ -1,1 +1,3 @@
-<p>form-rules works!</p>
+<div class="container text-center">
+        <button mat-button matStepperPrevious>Back</button>
+    </div>
