--- a/rent-project/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
@@ -1,37 +1,41 @@
-<button mat-raised-button (click)="isLinear = !isLinear" id="toggle-linear">
-        {{!isLinear ? 'Enable linear mode' : 'Disable linear mode'}}
-      </button>
-      <mat-horizontal-stepper [linear]="isLinear" #stepper>
-        <mat-step [stepControl]="firstFormGroup">
-          <form [formGroup]="firstFormGroup">
-            <ng-template matStepLabel>Fill out your name</ng-template>
-            <mat-form-field>
-              <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-            </mat-form-field>
-            <div>
-              <button mat-button matStepperNext>Next</button>
-            </div>
-          </form>
-        </mat-step>
-        <mat-step [stepControl]="secondFormGroup">
-          <form [formGroup]="secondFormGroup">
-            <ng-template matStepLabel>Fill out your address</ng-template>
-            <mat-form-field>
-              <input matInput placeholder="Address" formControlName="secondCtrl" required>
-            </mat-form-field>
-            <div>
-              <button mat-button matStepperPrevious>Back</button>
-              <button mat-button matStepperNext>Next</button>
-            </div>
-          </form>
-        </mat-step>
-        <mat-step>
-          <ng-template matStepLabel>Done</ng-template>
-          You are now done.
-          <div>
-            <button mat-button matStepperPrevious>Back</button>
-            <button mat-button (click)="stepper.reset()">Reset</button>
-          </div>
-        </mat-step>
-      </mat-horizontal-stepper>
+<div class="container text-center">
+    <div class="row">
+      <div class="col-4 text-left">
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Антиблокираща система</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Автоматичен контрол на стабилността</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Въздушни възглавници</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Парктроник</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">ISOFIX</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Система за подпомагане на спирането</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Система за защита от пробуксуване</mat-checkbox>
+      </div>
+
+      <div class="col-4 text-left">
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Bluetooth \ handsfree система</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Steptronic, Tiptronic</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">USB, AUX изводи</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Бордкомпютър</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Навигация</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Климатик</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Подгряване на седалките</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Стерео уредба</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Автопилот</mat-checkbox>
+      </div>
+
+      <div class="col-4 text-left">
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">4х4</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">7 места</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Панорамен люк</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Рейлинг на покрива</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Халогенни фарове</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Аларма</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">OFFROAD пакет</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Кожен салон</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Десен волан</mat-checkbox>
+      </div>
+    </div>
+
+    <button mat-button matStepperPrevious>Back</button>
+    <button mat-button matStepperNext>Next</button>
+</div>
       
