--- a/rent-project/src/app/hosting/add-vehicle/form-main/form-main.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-main/form-main.component.html
@@ -1,6 +1,6 @@
 <div class="container text-center">
     <form [formGroup]="mainForm">
-        <div class="row">
+        <div class="row mt-5">
             <div class="col-4">
                 <h4>Година:</h4>
                 <mat-form-field>
