--- a/rent-project/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
+++ b/rent-project/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
@@ -11,7 +11,7 @@
       </div>
 
       <div class="col-4 text-left">
-          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Bluetooth \ handsfree система</mat-checkbox>
+          <mat-checkbox class="d-block mt-4 checkbox" color="primary">Bluetooth / handsfree система</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Steptronic, Tiptronic</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">USB, AUX изводи</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Бордкомпютър</mat-checkbox>
