--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -1,1 +1,6 @@
-
+<section class="section" id="first">2312
+    <a pageScroll [pageScrollEasing]="myEasing" href="#awesomePart">Take me to the awesomeness</a>
+</section>
+<section class="section-2" id="awesomePart">32131
+    <a pageScroll [pageScrollEasing]="myEasing" href="#first">Take me to the awesomeness</a>
+</section>
