--- a/src/app/home/homepage/homepage.component.html
+++ b/src/app/home/homepage/homepage.component.html
@@ -1,6 +1,9 @@
 <section class="section" id="first">2312
-    <a pageScroll [pageScrollEasing]="myEasing" href="#awesomePart">Take me to the awesomeness</a>
+    <a pageScroll href="#awesomePart">Take me to the awesomeness</a>
+    <div class="search-form container">
+        <app-search-form></app-search-form>
+    </div>
 </section>
 <section class="section-2" id="awesomePart">32131
-    <a pageScroll [pageScrollEasing]="myEasing" href="#first">Take me to the awesomeness</a>
+    <a pageScroll href="#first">Take me to the awesomeness</a>
 </section>
