--- a/src/app/home/homepage/homepage.component.scss
+++ b/src/app/home/homepage/homepage.component.scss
@@ -1,10 +1,22 @@
 .section { 
-    height: 92vh; 
+    height: 100vh; 
     background: url('../../../assets/road1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    margin-top: -56px;
+}
+
+.search-form {
+    display: block;
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    height: 500px;
+    width: 500px;
+    background-color: rgba(245, 243, 239, 0.87);
+    box-shadow: 0 0 15px;
 }
 
 .section-2{
-    height: 90vh;
+    height: 100vh;
 }
