--- a/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
+++ b/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
@@ -1,6 +1,7 @@
 <div class="container text-center">
     <div class="row">
       <div class="col-4 text-left">
+          <h3>Безопасност</h3>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Антиблокираща система</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Автоматичен контрол на стабилността</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Въздушни възглавници</mat-checkbox>
@@ -11,6 +12,7 @@
       </div>
 
       <div class="col-4 text-left">
+          <h3>Комфорт</h3>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Bluetooth / handsfree система</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Steptronic, Tiptronic</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">USB, AUX изводи</mat-checkbox>
@@ -23,6 +25,7 @@
       </div>
 
       <div class="col-4 text-left">
+          <h3>Други</h3>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">4х4</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">7 места</mat-checkbox>
           <mat-checkbox class="d-block mt-4 checkbox" color="primary">Панорамен люк</mat-checkbox>
