--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar sticky-top navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+<nav class="navbar sticky-top navbar-expand-lg navbar-dark" style="background-color: #000000cc;">
     <div class="container">
-        <a class="navbar-brand" pageScroll [routerLink]="['home']" [pageScrollEasing]="myEasing" href="#myBody">Navbar</a>
+        <a class="navbar-brand" pageScroll [routerLink]="['']" href="#myBody">Navbar</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -8,17 +8,22 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" pageScroll [routerLink]="['home']" [pageScrollEasing]="myEasing" href="#awesomePart">Home <span class="sr-only">(current)</span></a>
+                <li class="nav-item">
+                    <a class="nav-link" pageScroll [routerLink]="['']" href="#awesomePart">За нас<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Контакти</a>
                 </li>
             </ul>
-            <form class="form-inline">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-primary my-2 my-sm-0" type="submit">Search</button>
-            </form>
+
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['host']">Добави твоята кола</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" [routerLink]="['host']">Търси</a>
+                </li>
+            </ul>
         </div>
     </div>
 </nav>
