add sorting to images

--- a/src/app/hosting/add-vehicle/form-description/image-upload/image-upload.component.html
+++ b/src/app/hosting/add-vehicle/form-description/image-upload/image-upload.component.html
@@ -1,11 +1,40 @@
 <div class="uploadfilecontainer" (click)="fileInput.click()" appDragDrop (onFileDropped)="uploadFile($event)">
     <input hidden type="file" multiple #fileInput (change)="uploadFile($event.target.files)">
 </div>
-<div class="files-list" *ngFor="let file of files;let i=index">
+<!-- <div class="files-list" *ngFor="let file of files;let i=index">
     <p>{{ i }}{{ file }}</p>
     <img [src]="urls[i]" class="rounded m-3" width="180">
     
     <button class="delete-file" (click)="deleteAttachment(i)">
         <img src="../../assets/Recycle_Bin_Full.png">
     </button>
-</div>
+</div> -->
+<button (click)="printInfo()">PrintInfo</button>
+
+<div *ngIf="files.length > 0" cdkDropList class="example-list" (cdkDropListDropped)="drop($event)">
+        <div class="files-list" *ngFor="let file of files; let i=index" cdkDrag>
+            {{ i }}
+            <img [src]="urls[i]" class="rounded m-3" width="180">
+            <button class="delete-file" (click)="deleteAttachment(i)">
+                    <img src="../../assets/Recycle_Bin_Full.png">
+                </button>
+        </div>
+      </div>
+      <!-- <button (click)="printInfo()">PrintInfo</button>
+
+      <div class="todo-container column-container">
+            <div class="list"
+                 cdkDropList
+                 [cdkDropListData]="files"
+                 (cdkDropListDropped)="onDrop($event)">
+              <h2>Tech to learn</h2>
+              <mat-card *ngFor="let file of files; let i=index" cdkDrag>
+                <mat-card-header>
+                  <mat-card-title>{{file.name}}</mat-card-title>
+                  <img [src]="urls[i]" class="rounded m-3" width="180">
+                  <!-- <mat-card-subtitle>{{todo.category}}</mat-card-subtitle> -->
+                <!-- </mat-card-header>
+              </mat-card>
+            </div>
+          </div> -->
+      
