--- a/src/app/hosting/add-vehicle/form-main/form-main.component.html
+++ b/src/app/hosting/add-vehicle/form-main/form-main.component.html
@@ -36,8 +36,8 @@
             <div class="col-4 text-center">
                 <h4>Скоростна кутия:</h4>
                 <mat-radio-group color="primary" formControlName="transmission">
-                    <mat-radio-button class="m-2" value="manual" checked>Ръчна</mat-radio-button>
-                    <mat-radio-button class="m-2" value="automatic">Автоматична</mat-radio-button>
+                    <mat-radio-button class="m-2" value="Ръчна">Ръчна</mat-radio-button>
+                    <mat-radio-button class="m-2" value="Автоматична">Автоматична</mat-radio-button>
                 </mat-radio-group>                          
             </div>
 
@@ -46,10 +46,10 @@
                 <mat-form-field>
                     <mat-label>Изберете тип двигател</mat-label>
                     <mat-select formControlName="engine">
-                        <mat-option value="petrol">Бензинов</mat-option>
-                        <mat-option value="diesel">Дизелов</mat-option>
-                        <mat-option value="electric">Електрически</mat-option>
-                        <mat-option value="hybrid">Хибриден</mat-option>
+                        <mat-option value="Бензинов">Бензинов</mat-option>
+                        <mat-option value="Дизелов">Дизелов</mat-option>
+                        <mat-option value="Електрически">Електрически</mat-option>
+                        <mat-option value="Хибриден">Хибриден</mat-option>
                     </mat-select>
                 </mat-form-field>
             </div>
