Finish create form

--- a/src/app/hosting/add-vehicle/add-vehicle.component.html
+++ b/src/app/hosting/add-vehicle/add-vehicle.component.html
@@ -14,6 +14,7 @@
 	<mat-step>
 		<ng-template matStepLabel>Допълнителна информация</ng-template>
 		<app-form-description></app-form-description>
+		<button mat-button (click)="show()">Show Pics</button>
 	</mat-step>
 
 	<mat-step>
