--- a/src/app/hosting/add-vehicle/form-description/form-description.component.html
+++ b/src/app/hosting/add-vehicle/form-description/form-description.component.html
@@ -9,9 +9,9 @@
     
         <div class="col-6">
             <h4>Добавете снимки:</h4>
-            <app-image-upload></app-image-upload>
+            <app-image-upload (messageEvent)="receiveImages($event)"></app-image-upload>
         </div>
-    
+        <button mat-button (click)="show($event)">Print Info</button>
     </div>
 
 
