--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -30,7 +30,7 @@
                     <a class="nav-link" [routerLink]="['login']" (click)="authService.logoutUser()">Logout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" *ngIf="loggedIn()">{{ displayName }}</a>
+                    <a class="nav-link" *ngIf="loggedIn()">{{ currentUser.username }}</a>
                 </li>
             </ul>
         </div>
