--- a/src/app/home/homepage/homepage.component.scss
+++ b/src/app/home/homepage/homepage.component.scss
@@ -3,7 +3,7 @@
     background: url('../../../assets/road1.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: -56px;
+    // margin-top: -56px;
 }
 
 .search-form {
