--- a/src/app/hosting/add-vehicle/add-vehicle.component.html
+++ b/src/app/hosting/add-vehicle/add-vehicle.component.html
@@ -1,10 +1,10 @@
 <mat-horizontal-stepper [linear]="false" #stepper>
 
-	<!-- <mat-step [stepControl]="formStepOne">
+	<mat-step [stepControl]="formStepOne">
 		<ng-template matStepLabel>Основна информация</ng-template>
 		<app-form-main></app-form-main>
 		<button mat-button (click)="submit()">Submit</button>
-	</mat-step> -->
+	</mat-step>
 
 	<mat-step [stepControl]="formStepTwo">
 		<ng-template matStepLabel>Местоположение</ng-template>
