--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,3 +1,33 @@
-.navbar{
-    box-shadow: 0 0 25px;
+::ng-deep .navbar{
+    font-size: 18px;
+}
+
+.profile-pic {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+}
+
+.view {
+    background: url("https://mdbootstrap.com/img/Photos/Others/img (40).jpg")no-repeat center center;
+    background-size: cover;
+    height: 100vh;
+}
+
+.navbar {
+    background-color: transparent;
+}
+
+::ng-deep .top-nav-collapse{
+    background-color: rgb(36, 36, 37);
+}
+
+::ng-deep .black-color{
+    background-color: rgb(36, 36, 37) !important;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar {
+        background-color: #4285F4;
+    }
 }
